--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: required
 services:
-	- docker
+ - docker
 before_install:
-	- docker build -t gaurav-prasad/docker-react -f Dockerfile.dev .
+ - docker build -t gaurav-prasad/docker-react -f Dockerfile.dev .
 
 script:
-	- docker run -e CI=true gaurav-prasad/docker-react npm run test
+ - docker run gaurav-prasad/docker-react npm run test -- --coverage
