--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install:
  - docker build -t gaurav-prasad/docker-react -f Dockerfile.dev .
 
 script:
- - docker run gaurav-prasad/docker-react npm run test -- --coverage
+ - - docker run -e CI=true gaurav-prasad/docker-react npm run test
